--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: soFrdia
 
 # Name of the author
-author: Amit Merchant
+author: June Park
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: soFrdia
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /reverie/images/reverie.png
@@ -45,14 +45,14 @@ google_analytics:
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://sofrida.github.io
+#enforce_ssl: https://www.amitmerchant.com/reverie
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
