--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: June Park
 description: soFrdia
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /reverie/images/reverie.png
+avatar: images/reverie.png
 
 #
 # Flags below are optional
@@ -45,14 +45,14 @@ google_analytics:
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://sofrida.github.io
+url: https://sofrida.github.io
 #enforce_ssl: https://www.amitmerchant.com/reverie
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/sofrida.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
