--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ url: https://sofrida.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/sofrida.github.io"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
