--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: June Park
 description: soFrdia
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/logo.png
+avatar: /images/logo_2.png
 
 #
 # Flags below are optional
