--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: soFrdia
 author: June Park
 
 # Short bio or description (displayed in the header)
-description: soFrdia
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/logo_2.png
