--- a/_config.yml
+++ b/_config.yml
@@ -64,31 +64,41 @@ permalink: /:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
 
 # Conversion
-markdown            : kramdown
-highlighter         : rouge
-lsi                 : false
-excerpt_separator   : "\n\n"
-incremental         : false
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
 
-# Markdown Processors
-rdiscount:
-  extensions        : []
 
-redcarpet:
-  extensions        : []
-  
+# Markdown Processing
 kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
-# Set the Sass partials directory, as we're using @imports
+# # Conversion
+# markdown: kramdown
+
+# kramdown:
+#   # Use GitHub flavored markdown, including triple backtick fenced code blocks
+#   input: GFM
+#   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+#   syntax_highlighter: rouge
+#   syntax_highlighter_opts:
+#     # Use existing pygments syntax highlighting css
+#     css_class: 'highlight'
+
+# # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
